<resources>
    <string name="app_name">thePhoto Event</string>
    <string name="code_prompt">Enter the code given by thePhoto</string>
    <string name="go_button">Go</string>
    <string name="code_hint">Code</string>
    <string name="connecting_prompt">Connecting to thePhoto...</string>
    <string name="invalid_code_title">That didn\'t work.</string>
    <string name="invalid_code_message">We can\'t seem to get to that computer. Check that you\'ve got the code correct and that you\'re connected to the correct WiFi network.</string>
    <string name="ok">OK</string>

    <string name="title_activity_camera">Camera</string>
    <string name="keep_copy_prompt">Keep a copy of images on this device</string>
    <string name="ENTER_NAME_TO_IDENTIFY">Enter a name to identify yourself</string>
    <string name="title_activity_settings">Settings</string>
    <string name="STRING_SETTINGS">Settings</string>

    <string name="ERROR_DISCONNECTED_TITLE">Disconnected from the server</string>
    <string name="ERROR_DISCONNECTED">You\'ve been unexpectedly disconnected from the server. Reconnect to the server to continue.</string>

    <string name="connected_notification_title">Connected to thePhoto</string>
    <string name="connected_notification_text">You\'re currently connected to thePhoto.</string>
    <string name="connected_notification_disconnect_button">Disconnect</string>
    <string name="connected_notification_channel_name">Connected</string>
    <string name="connected_notification_channel_description">Notifications that show when you\'re connected to thePhoto</string>

    <string name="disconnected_notification_title">Disconnected from thePhoto</string>
    <string name="disconnected_dialog_text">You\'ve been unexpectedly disconnected from thePhoto, and we can\'t seem to reconnect.\n\nMake sure you\'re still connected to the WiFi network and that the server is still running.\n\nYou can try reconnecting by reopening thePhoto Event and entering the code again.</string>
    <string name="disconnected_notification_text">While you were gone, your device was disconnected from thePhoto. To continue taking pictures, you\'ll need to reconnect to thePhoto.</string>

    <!-- Strings related to Settings -->
    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>

    <string name="flash_value_automatic">Automatic</string>
    <string name="flash_value_on">On</string>
    <string name="flash_value_off">Off</string>
    <string name="flash_dialog_title">Flash</string>
    <string name="timer_dialog_title">Timer</string>
    <string name="timer_value_0sec">Off</string>
    <string name="timer_value_3sec">3 seconds</string>
    <string name="timer_value_10sec">10 seconds</string>

    <string name="pref_sound_type_entries_1">Ping</string>
    <string name="pref_sound_type_entries_2">turtleTimer</string>

    <!-- Strings related to Onboarding -->
    <string name="onboarding_welcome">Welcome to thePhoto!</string>
    <string name="onboarding_welcome_description">Let\'s get you taking photos and showing them on the big screen!</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_identify_title">Who are you?</string>
    <string name="onboarding_identify_why">This will be used to identify yourself on the big screen. You can always change this later in Settings.</string>
    <string name="onboarding_identify_display_name">Display Name</string>
    <string name="open_wifi_settings">Open Wi-Fi Settings</string>
    <string name="menu_options_help">Help</string>
    <string name="main_more_button">More</string>
    <string name="help_title">What can we help you with?</string>
    <string name="help_activity_title">Help</string>

    <string name="help_getting_started">Getting Started</string>
    <string name="help_getting_started_step">Step</string>
    <string name="help_getting_started_step_1_title">On your computer, grab the thePhoto Event Client App.</string>
    <string name="help_getting_started_step_1_text1">Visit this link on your computer:</string>
    <string name="help_getting_started_step_2_title">Enter Event Mode</string>
    <string name="help_getting_started_step_2_text1">After opening thePhoto, go to File > Event Mode</string>
    <string name="help_getting_started_step_3_title">Obtain the code</string>
    <string name="help_getting_started_step_3_text1">Enter the code found in the bottom right corner of the second screen into thePhoto.</string>
    <string name="disconnected_reconnecting">Attempting to reconnect...</string>
</resources>
