<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/goButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="goButtonClicked"
        android:text="@string/go_button"
        android:textColor="#ff6400"
        app:layout_constraintEnd_toEndOf="@+id/onboarding_name_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_name_input_layout" />

    <CheckBox
        android:id="@+id/keepCopyCheckbox"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/keep_copy_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goButton" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_thephoto_logo"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="32dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"

            android:layout_weight="1"
            android:text="thePhoto"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/onboarding_name_input_layout"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/codeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/code_hint"
            android:imeOptions="actionGo|flagNoExtractUi"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:text="32322 "
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="325dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/moreButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openMore"
        android:text="@string/main_more_button"
        app:layout_constraintStart_toStartOf="@+id/onboarding_name_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_name_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>